<resources>
    <string name="select">Select an option</string>
    <string name="one_door">Measure for one door</string>
    <string name="stairs">Measure for Stairs</string>
    <string name="app_name">Couch Measurer</string>
    <string name="title">Enter Dimensions (in inches)</string>
    <string name="couch_title">Couch Measurements</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="stair_title">Stair Measurements</string>
    <string name="door_title">Door Measurements</string>
    <string name="door_width">Smallest Door/Hall Width</string>
    <string name="door_height">Door Height</string>
    <string name="enter_measurements">Enter Measurements</string>
    <string name="can_fit">Good to go!</string>
    <string name="not_fit">The couch will not fit.</string>
    <string name="title_activity_stairs">StairsActivity</string>
</resources>
