<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="225dp"
        android:layout_height="49dp"
        android:text="@string/select"
        android:textAlignment="center"
        android:textSize="@dimen/title_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <LinearLayout
        android:layout_width="289dp"
        android:layout_height="395dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTitle">

        <Button
            android:id="@+id/one_door_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_spacing"
            android:text="@string/one_door" />

        <Button
            android:id="@+id/stair_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stairs" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>